istio-gateway-and-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: gh-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: gh-router
  namespace: default
spec:
  hosts:
  - "*"
  gateways:
  - gh-gateway
  http:
  - match:
    - uri:
        exact: /default/gatsby-hello/
    rewrite:
      uri: "/"
    route:
    - destination:
        host: gh-entrypoint
        port:
          number: 9000
